--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,8 @@ dependencies {
     implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.4.1'
     implementation 'mysql:mysql-connector-java'
     implementation 'org.projectlombok:lombok'
+    compile "org.projectlombok:lombok:1.18.8"
+    annotationProcessor("org.projectlombok:lombok:1.18.8")
     implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
