Create 완성/validate완성/category combobox 완성/imguploader 완성

--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,8 @@ dependencies {
     implementation 'mysql:mysql-connector-java'
     implementation 'org.projectlombok:lombok'
     compile "org.projectlombok:lombok:1.18.8"
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
+    compile group: 'commons-io', name: 'commons-io', version: '2.6'
     annotationProcessor("org.projectlombok:lombok:1.18.8")
     implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
