contact 이메일 서비스 완성

--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
     compile "org.projectlombok:lombok:1.18.8"
+    compile "org.springframework.boot:spring-boot-starter-mail"
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
     compile group: 'commons-io', name: 'commons-io', version: '2.6'
     annotationProcessor("org.projectlombok:lombok:1.18.8")
