--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.servlet.multipart.max-file-size=40MB
 spring.servlet.multipart.max-request-size=40MB
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=sdr2936
-spring.mail.password=sdr2936735^
+spring.mail.username=
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
